--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
+    "cordova": "^6.2.0",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
+    "graceful-fs": "^4.1.4",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
@@ -18,5 +20,9 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.5.0"
-  }
+  },
+  "cordovaPlugins": [],
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
