--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "method-override": "^2.3.6",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
-    "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "urllib": "^2.11.0"
   },
   "scripts": {
     "es6-start": "babel-node app/app.js"
