--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "graceful-fs": "^4.1.4",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
+    "shelljs": "^0.7.0",
     "superagent": "^2.0.0",
     "urllib": "^2.11.0"
   },
