--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "MEN",
   "version": "0.0.1",
   "dependencies": {
+    "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "co": "^4.6.0",
     "compression": "^1.6.2",
     "cordova": "^6.2.0",
     "express": "^4.14.0",
@@ -26,7 +28,9 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.5.0"
+    "babel-preset-stage-2": "^6.5.0",
+    "babel-polyfill": "6.6.1",
+    "babel-runtime": "6.6.1"
   },
   "cordovaPlugins": [],
   "cordovaPlatforms": [
