--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "MEN",
   "version": "0.0.1",
   "dependencies": {
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-polyfill": "^6.6.1",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
     "co": "^4.6.0",
     "compression": "^1.6.2",
+    "connect-busboy": "0.0.2",
     "cordova": "^6.2.0",
     "express": "^4.14.0",
     "express-session": "^1.13.0",
@@ -19,6 +23,7 @@
     "method-override": "^2.3.6",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
+    "node-uuid": "^1.4.7",
     "shelljs": "^0.7.0",
     "superagent": "^2.0.0",
     "urllib": "^2.11.0"
