--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "babel-polyfill": "^6.6.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
-    "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
-    "co": "^4.6.0",
+
     "compression": "^1.6.2",
     "connect-busboy": "0.0.2",
-    "cordova": "^6.2.0",
+
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "graceful-fs": "^4.1.4",
@@ -22,18 +21,16 @@
     "gulp-sass": "^2.3.2",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.1",
-    "morgan": "^1.7.0",
-    "node-uuid": "^1.4.7",
-    "shelljs": "^0.7.0",
-    "superagent": "^2.0.0",
-    "urllib": "^2.11.0"
+    "node-uuid": "^1.4.7"
+
+
   },
   "scripts": {
     "es6-start": "babel-node app/app.js"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-2": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-polyfill": "6.6.1",
     "babel-runtime": "6.6.1"
   },
