--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
     "body-parser": "^1.15.2",
-
+    "bower": "^1.7.9",
     "compression": "^1.6.2",
     "connect-busboy": "0.0.2",
-
     "express": "^4.14.0",
     "express-session": "^1.13.0",
     "graceful-fs": "^4.1.4",
@@ -21,9 +20,9 @@
     "gulp-sass": "^2.3.2",
     "method-override": "^2.3.6",
     "mongoose": "^4.5.1",
-    "node-uuid": "^1.4.7"
-
-
+    "morgan": "^1.7.0",
+    "node-uuid": "^1.4.7",
+    "socket.io": "^1.4.8"
   },
   "scripts": {
     "es6-start": "babel-node app/app.js"
