--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "socket.io": "^1.4.8"
   },
   "scripts": {
-    "es6-start": "babel-node app/app.js"
+    "es6-start": "babel-node app/app.js",
+    "build":"gulp"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.9.0",
