--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "node-uuid": "^1.4.7",
     "reload": "^1.0.0",
     "socket.io": "^1.4.8",
-    "uglify": "^0.1.5"
+    "uglify": "^0.1.5",
+    "vinyl-paths": "^2.1.0"
   },
   "scripts": {
     "es6-start": "babel-node app/app.js",
