--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "reload": "^1.0.0",
     "socket.io": "^1.4.8",
     "uglify": "^0.1.5",
+    "upyun": "^2.0.2",
     "vinyl-paths": "^2.1.0"
   },
   "scripts": {
