ftp服务器接口完成,上传拍照到ftp服务器

--- a/package.json
+++ b/package.json
@@ -42,7 +42,12 @@
     "babel-polyfill": "6.6.1",
     "babel-runtime": "6.6.1"
   },
-  "cordovaPlugins": [],
+  "cordovaPlugins": [
+    {
+      "locator": "https://github.com/apache/cordova-plugin-whitelist.git",
+      "id": "cordova-plugin-whitelist"
+    }
+  ],
   "cordovaPlatforms": [
     "android",
     "ios"
