--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sequence": "^0.4.5",
     "http": "0.0.0",
     "method-override": "^2.3.6",
+    "moment": "^2.14.1",
     "mongoose": "^4.5.1",
     "morgan": "^1.7.0",
     "node-uuid": "^1.4.7",
